[gd_scene load_steps=14 format=2]

[ext_resource path="res://entities/Assets/Background/Night Sky/NightSkyAnimated.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/Assets/Disc Golf Basket/basket.png" type="Texture" id=2]
[ext_resource path="res://entities/Player/Kevin Simons/kevinsimmonsballoon1.png" type="Texture" id=3]
[ext_resource path="res://ui/fonts/ChiKareGo2Font.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://entities/Player/submarine swimming player wade/submarinewithplayer1.png" type="Texture" id=5]
[ext_resource path="res://ui/games menu/Games.gd" type="Script" id=6]
[ext_resource path="res://audio/sound effects/Menu Select/MenuSelect.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="Games" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.2, 1.2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
disc_golf_game = "res://levels/intro/intro-cutscene/IntroCutscene.tscn"
kevin_simmons_game = "res://test/BaloonTest.tscn"
hoops_game = "res://levels/intro/Drewzer Brewzer House/DrewHouse.tscn"
main_menu = "res://ui/main menu/MainMenuUI.tscn"

[node name="NightSkyAnimated" parent="." instance=ExtResource( 1 )]
position = Vector2( 266.667, 160 )
frame = 1

[node name="Title Pictures" type="YSort" parent="."]

[node name="kevinsimmonsballoon1" type="Sprite" parent="Title Pictures"]
position = Vector2( 266.667, 133.333 )
texture = ExtResource( 3 )

[node name="basket" type="Sprite" parent="Title Pictures"]
position = Vector2( 106.667, 146.667 )
texture = ExtResource( 2 )

[node name="submarinewithplayer1" type="Sprite" parent="Title Pictures"]
position = Vector2( 426.667, 146.667 )
texture = ExtResource( 5 )

[node name="Text" type="YSort" parent="."]

[node name="Title" type="RichTextLabel" parent="Text"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 146.667
margin_top = 26.6667
margin_right = 386.667
margin_bottom = 66.6667
theme = SubResource( 2 )
text = "Select Your Game"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Disc Game" type="RichTextLabel" parent="Text"]
margin_left = 73.3333
margin_top = 186.667
margin_right = 146.333
margin_bottom = 226.667
theme = SubResource( 4 )
text = "Disc Golf"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kevin Simmons" type="RichTextLabel" parent="Text"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 173.333
margin_top = 186.667
margin_right = 353.333
margin_bottom = 219.667
theme = SubResource( 4 )
text = "Legend Of Kevin Simmons"
scroll_active = false

[node name="Aqua Hoops" type="RichTextLabel" parent="Text"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 386.667
margin_top = 186.667
margin_right = 466.667
margin_bottom = 219.667
theme = SubResource( 4 )
text = "Aqua Hoops"
scroll_active = false

[node name="Buttons" type="YSort" parent="."]

[node name="DiscGolfButton" type="Button" parent="Buttons"]
margin_left = 67.0
margin_top = 113.0
margin_right = 147.0
margin_bottom = 180.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KevimButton" type="Button" parent="Buttons"]
margin_left = 227.0
margin_top = 107.0
margin_right = 314.0
margin_bottom = 181.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoopsButton" type="Button" parent="Buttons"]
margin_left = 366.667
margin_top = 120.0
margin_right = 479.667
margin_bottom = 180.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 226.667
margin_top = 273.333
margin_right = 311.667
margin_bottom = 294.333
theme = SubResource( 6 )
text = "Main Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSelect" parent="." instance=ExtResource( 7 )]
[connection signal="pressed" from="Buttons/DiscGolfButton" to="." method="_on_DiscGolfButton_pressed"]
[connection signal="pressed" from="Buttons/KevimButton" to="." method="_on_KevimButton_pressed"]
[connection signal="pressed" from="Buttons/HoopsButton" to="." method="_on_HoopsButton_pressed"]
[connection signal="pressed" from="Buttons/MainMenu" to="." method="_on_MainMenu_pressed"]
